--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
-        "react": "^16.11.0",
-        "react-dom": "^16.11.0",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "antd": "^3.25.1",
         "react-router-dom": "^5.1.2"
     }
 }
