--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "antd": "^3.25.2",
+        "babel-plugin-import": "^1.13.0",
         "react-router-dom": "^5.1.2"
     }
 }
