--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     },
     "dependencies": {
         "antd": "^3.25.2",
-        "babel-plugin-import": "^1.13.0",
+        "js-cookie": "^2.2.1",
         "react-router-dom": "^5.1.2"
     }
 }
