--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
         "react-dom": "^16.12.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.23.7",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "antd": "^3.25.2",
+        "babel-plugin-import": "^1.13.0",
+        "customize-cra": "^0.9.1",
         "js-cookie": "^2.2.1",
+        "moment": "^2.24.0",
         "react-router-dom": "^5.1.2"
     }
 }
