--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
     "plugins": [
-        ["import", { "libraryName": "antd", "libraryDirectory": "lib"}, "ant"]
+      ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" },"ant"]
       ]
 }
