--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,13 @@
 {
-    "plugins": [
-      ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" },"ant"]
-      ]
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "css"
+      },
+      "ant"
+    ]
+  ]
 }
